@@ -29,7 +29,7 @@ speed = np.sqrt(udat**2+vdat**2)
 fig = plt.figure(figsize=(8,8))
 m = Basemap(projection='cyl',llcrnrlat=lats1[0],llcrnrlon=lons1[0],urcrnrlat=lats1[-1],urcrnrlon=lons1[-1],resolution='i')
 x, y = m(lons,lats)
-plt.streamplot(x,y,udat,vdat,color=speed,linewidth=2,density=2,cmap=plt.cm.spectral)
+m.streamplot(x,y,udat,vdat,color=speed,linewidth=2,density=2,cmap=plt.cm.spectral)
 m.colorbar()
 m.drawcoastlines()
 m.drawmeridians(np.arange(-120,-60,2),labels=[0,0,0,1])
