@@ -1,4 +1,5 @@
 version 1.0.3 (not yet released)
+           * add streamplot method, along with streamplot_demo.py example.
            * add boundarylats, boundarylons Basemap attributes (arrays
              describing map boundaries - useful for illustrating map projection
              region on another map). Example illustrating usage
